--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,10 @@
 
 export(calc_features)
 export(discretizeImage)
-exportClasses(glcm)
-exportClasses(glrlm)
-exportClasses(glszm)
-exportClasses(mglszm)
+export(glcm)
+export(glrlm)
+export(glszm)
+export(mglszm)
 exportMethods(calc_features)
 exportMethods(image)
 importFrom(grDevices,heat.colors)
